Fix responsive design bug where About and Project sections overlap

--- a/src/components/About/About.styles.scss
+++ b/src/components/About/About.styles.scss
@@ -1,14 +1,13 @@
 #about {
-  padding-top: 2rem;
+  margin-top: 2rem;
   
   @media (min-width: 1170px) {
-    height: 100vh;
-    padding-top: 7rem;
+    margin-top: 5rem;
   }
 }
 
 .about {
-  margin: 0 auto;
+  margin: 4.5rem auto;
   width: 100%;
 
   h2 {
@@ -16,13 +15,13 @@
 
     @media (max-width: 600px) {
       h2 {
-        padding-top: 3rem;
+        margin-top: 3rem;
       }
     }
   }
 
   h3 {
-    padding: 2rem;
+    margin: 2rem;
   }
     
   span {
@@ -37,14 +36,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;  
-
-  @media (min-width: 1170px) {
-    flex-direction: row;
-  }
 }
 
 .summary-content {
-  padding: 2rem 0;
+  margin: 2rem 0;
 
   h3, p {
     text-align: center;
@@ -53,10 +48,10 @@
   p {
     font-size: 1.5rem;
     line-height: 2.2rem;
-    padding: 1rem;
+    margin: 1rem;
 
     @media (min-width: 970px) {
-      padding: 1rem 2rem;
+      margin: 1rem 2rem;
       font-size: 1.4rem;
     }
 
@@ -78,11 +73,11 @@
 
   span {
     font-size: 3.5rem;
-    padding-right: 0.4rem;
+    margin-right: 0.4rem;
   }
 
   li {
-    padding: 0.5rem;
+    margin: 0.5rem;
     list-style: none;
     font-size: 1.8rem;
     width: min-content;
@@ -116,9 +111,5 @@
   @media (min-width: 600px) {
     width: 20rem;
     height: 20rem;
-  }
-
-  @media (min-width: 1170px) {
-    margin-left: 3rem;
   }
 }
