--- a/src/pages/index.styles.scss
+++ b/src/pages/index.styles.scss
@@ -41,7 +41,7 @@ h3 {
 }
 
 .container {
-  padding-top: 56px;
+  // margin-top: 56px;
   width: 100vw;
   margin: 0 auto;
 
